Add notebook with Metashape camera metadata example.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -32,33 +32,119 @@
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "load_project() missing 1 required positional argument: 'path'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 17\u001b[0m\n\u001b[1;32m     13\u001b[0m     backend\u001b[38;5;241m.\u001b[39mload_project()\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# INVOKE MAIN\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[1], line 13\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Main entrypoint.\"\"\"\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# NOTE: Write your code here\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m \u001b[43mbackend\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_project\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: load_project() missing 1 required positional argument: 'path'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LoadProject: path = /data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_with_metadata.psz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-10-01 23:10:57.233\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m17\u001b[0m - \u001b[1mloaded project: loaded document /data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_with_metadata.psz successfully\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.238\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.241\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.243\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.244\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.245\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.246\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.247\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.248\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.249\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.250\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.251\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.252\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.253\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.253\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.254\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.255\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.256\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.257\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.258\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.259\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.260\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.261\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.261\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.261\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.262\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.262\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m33\u001b[0m - \u001b[1m{'greeting': 'hello'}\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.263\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m41\u001b[0m - \u001b[1mitems: <class 'tuple'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.263\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mkeys: <class 'str'>\u001b[0m\n",
+      "\u001b[32m2024-10-01 23:10:57.263\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m43\u001b[0m - \u001b[1mvalues: <class 'str'>\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded project in 16.5286 sec\n"
      ]
     }
    ],
    "source": [
     "from pathlib import Path\n",
+    "from typing import Any\n",
+    "\n",
+    "import Metashape as ms\n",
     "\n",
     "import mynd.backend.metashape as backend\n",
     "\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
+    "DIRECTORY: Path = Path(\"/data/kingston_snv_01/acfr_revisits_metashape_dev\")\n",
+    "SOURCE_PROJECT: Path = DIRECTORY / Path(\"r23685bc_lite_version.psz\")\n",
+    "DESTINATION_PROJECT: Path = DIRECTORY / Path(\"r23685bc_lite_with_metadata.psz\")\n",
+    "\n",
+    "match backend.load_project(DESTINATION_PROJECT):\n",
+    "    case Ok(path):\n",
+    "        logger.info(f\"loaded project: {path}\")\n",
+    "    case Err(message):\n",
+    "        logger.info(f\"failed to load project: {message}\")\n",
     "\n",
     "def main() -> None:\n",
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
     "    # NOTE: Write your code here\n",
-    "    backend.load_project()\n",
+    "    document: ms.Document = backend.context._backend_data.get(\"document\")\n",
+    "    chunk: ms.Chunk = document.chunks[0]\n",
     "\n",
+    "    for camera in chunk.cameras[:10]:\n",
+    "\n",
+    "        # NOTE: This is how you write metadata to cameras\n",
+    "        camera.meta[\"greeting\"] = \"hello\"\n",
+    "        \n",
+    "        if not camera.meta:\n",
+    "            continue\n",
+    "        else:\n",
+    "            logger.info(camera.meta)\n",
+    "\n",
+    "            # NOTE: This is how you retrieve metadata from cameras\n",
+    "            items: list[tuple[Any, Any]] = camera.meta.items()\n",
+    "            keys: list[Any] = camera.meta.keys()\n",
+    "            values: list[Any] = camera.meta.values()\n",
+    "            \n",
+    "    \n",
+    "    save: bool = False\n",
+    "    if save:\n",
+    "        match backend.save_project(DESTINATION_PROJECT):\n",
+    "            case Ok(path):\n",
+    "                logger.info(f\"successfully saved project to: {path}\")\n",
+    "            case Err(message):\n",
+    "                logger.error(f\"failed to save project: {message}\")\n",
+    "    \n",
     "\n",
     "# INVOKE MAIN\n",
     "main()"
