Add naive implementation of metadata ingest CLI.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,15 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-10-05 14:26:30.669\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m74\u001b[0m - \u001b[31m\u001b[1mbackend already has a loaded project\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "from typing import Any\n",
     "\n",
     "import Metashape as ms\n",
+    "import polars as pl\n",
     "\n",
     "import mynd.backend.metashape as backend\n",
     "\n",
@@ -27,14 +36,9 @@
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "DESTINATION_PROJECT: Path = DIRECTORY / Path(\"r23685bc_lite_with_metadata.psz\")\n",
-    "\n",
-    "\n",
     "def work_with_project(metadata: pl.DataFrame) -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
-    "    \n",
+    "\n",
     "    # NOTE: Write your code here\n",
     "    document: ms.Document = backend.context._backend_data.get(\"document\")\n",
     "    chunk: ms.Chunk = document.chunks[0]\n",
@@ -42,8 +46,9 @@
     "    for camera in chunk.cameras[:10]:\n",
     "\n",
     "        # NOTE: This is how you write metadata to cameras\n",
-    "        camera.meta[\"greeting\"] = \"hello\"\n",
-    "        \n",
+    "        # NOTE: Metashape only allows metadata to be store as strings\n",
+    "        camera.meta[\"greeting\"] = str(10)\n",
+    "\n",
     "        if not camera.meta:\n",
     "            continue\n",
     "        else:\n",
@@ -53,8 +58,7 @@
     "            items: list[tuple[Any, Any]] = camera.meta.items()\n",
     "            keys: list[Any] = camera.meta.keys()\n",
     "            values: list[Any] = camera.meta.values()\n",
-    "            \n",
-    "    \n",
+    "\n",
     "    save: bool = False\n",
     "    if save:\n",
     "        match backend.save_project(DESTINATION_PROJECT):\n",
@@ -68,9 +72,15 @@
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
     "    PATHS: dict[str, Path] = {\n",
-    "        \"source\": Path(\"/data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_version.psz\"),\n",
-    "        \"destination\": Path(\"/data/kingston_snv_01/acfr_revisits_metashape_dev/r23685bc_lite_with_metadata.psz\"),\n",
-    "        \"metadata\": Path(\"/data/kingston_snv_01/acfr_camera_metadata/r23685bc_20100605_021022_camera_metadata.csv\"),\n",
+    "        \"source\": Path(\n",
+    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite.psz\"\n",
+    "        ),\n",
+    "        \"destination\": Path(\n",
+    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
+    "        ),\n",
+    "        \"metadata\": Path(\n",
+    "            \"/data/kingston_snv_01/acfr_cameras_metadata/r23685bc_20100605_021022_camera_metadata.csv\"\n",
+    "        ),\n",
     "    }\n",
     "\n",
     "    # Options\n",
@@ -89,14 +99,14 @@
     "        case Err(message):\n",
     "            logger.error(message)\n",
     "            return\n",
-    "    \n",
+    "\n",
     "    if save:\n",
-    "        match backend.save_project(DESTINATION_PROJECT):\n",
+    "        match backend.save_project(PATHS.get(\"destination\")):\n",
     "            case Ok(path):\n",
     "                logger.info(f\"successfully saved project to: {path}\")\n",
     "            case Err(message):\n",
     "                logger.error(f\"failed to save project: {message}\")\n",
-    "    \n",
+    "\n",
     "\n",
     "# INVOKE MAIN\n",
     "main()"
