Add functionality to retrieve metadata from Metashape backend. Update metashape backend structure.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,21 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-10-05 14:26:30.669\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m74\u001b[0m - \u001b[31m\u001b[1mbackend already has a loaded project\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import ast\n",
+    "\n",
     "from pathlib import Path\n",
-    "from typing import Any\n",
+    "from typing import Any, Callable, Optional\n",
     "\n",
     "import Metashape as ms\n",
     "import polars as pl\n",
@@ -32,40 +26,42 @@
     "import mynd.backend.metashape as backend\n",
     "\n",
     "from mynd.io import read_data_frame\n",
+    "from mynd.tasks.ingestion import map_metadata_to_cameras\n",
     "from mynd.utils.log import logger\n",
     "from mynd.utils.result import Ok, Err, Result\n",
     "\n",
     "\n",
-    "def work_with_project(metadata: pl.DataFrame) -> None:\n",
+    "from mynd.collections import CameraGroup\n",
+    "\n",
+    "\n",
+    "GroupID = CameraGroup.Identifier\n",
+    "\n",
+    "\n",
+    "def insert_metadata(identifier: GroupID, metadata: pl.DataFrame) -> None:\n",
     "    \"\"\"TODO\"\"\"\n",
     "\n",
+    "    camera_metadata: dict[str, dict] = map_metadata_to_cameras(\n",
+    "        metadata,\n",
+    "        label_column=\"label\",\n",
+    "        data_columns=[\"exposure\"],\n",
+    "    )\n",
+    "\n",
     "    # NOTE: Write your code here\n",
-    "    document: ms.Document = backend.context._backend_data.get(\"document\")\n",
-    "    chunk: ms.Chunk = document.chunks[0]\n",
+    "    match backend.camera_services.update_camera_metadata(identifier, metadata):\n",
+    "        case Ok(updated):\n",
+    "            logger.info(\"successfully update metadata\")\n",
+    "        case Err(message):\n",
+    "            logger.error(message)\n",
     "\n",
-    "    for camera in chunk.cameras[:10]:\n",
     "\n",
-    "        # NOTE: This is how you write metadata to cameras\n",
-    "        # NOTE: Metashape only allows metadata to be store as strings\n",
-    "        camera.meta[\"greeting\"] = str(10)\n",
+    "def retrieve_metadata(identifier: GroupID) -> dict:\n",
+    "    \"\"\"Retrieves metadata from a group.\"\"\"\n",
     "\n",
-    "        if not camera.meta:\n",
-    "            continue\n",
-    "        else:\n",
-    "            logger.info(camera.meta)\n",
-    "\n",
-    "            # NOTE: This is how you retrieve metadata from cameras\n",
-    "            items: list[tuple[Any, Any]] = camera.meta.items()\n",
-    "            keys: list[Any] = camera.meta.keys()\n",
-    "            values: list[Any] = camera.meta.values()\n",
-    "\n",
-    "    save: bool = False\n",
-    "    if save:\n",
-    "        match backend.save_project(DESTINATION_PROJECT):\n",
-    "            case Ok(path):\n",
-    "                logger.info(f\"successfully saved project to: {path}\")\n",
-    "            case Err(message):\n",
-    "                logger.error(f\"failed to save project: {message}\")\n",
+    "    match backend.camera_services.get_camera_metadata(identifier):\n",
+    "        case Ok(metadata):\n",
+    "            logger.info(metadata)\n",
+    "        case Err(message):\n",
+    "            logger.error(message)\n",
     "\n",
     "\n",
     "def main() -> None:\n",
@@ -73,7 +69,7 @@
     "\n",
     "    PATHS: dict[str, Path] = {\n",
     "        \"source\": Path(\n",
-    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite.psz\"\n",
+    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
     "        ),\n",
     "        \"destination\": Path(\n",
     "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
@@ -85,20 +81,20 @@
     "\n",
     "    # Options\n",
     "    save: bool = False\n",
+    "    identifier: GroupID = GroupID(key=0, label=\"r23685bc_20100605_021022\")\n",
     "\n",
-    "    match read_data_frame(PATHS.get(\"metadata\")):\n",
-    "        case Ok(metadata):\n",
-    "            pass\n",
-    "        case Err(message):\n",
-    "            logger.error(message)\n",
-    "            return\n",
+    "    metadata: pl.DataFrame = read_data_frame(PATHS.get(\"metadata\")).unwrap()\n",
     "\n",
-    "    match backend.load_project(PATHS.get(\"source\")):\n",
-    "        case Ok(path):\n",
-    "            work_with_project(metadata)\n",
-    "        case Err(message):\n",
-    "            logger.error(message)\n",
-    "            return\n",
+    "    if not backend.loaded_project():\n",
+    "        match backend.load_project(PATHS.get(\"source\")):\n",
+    "            case Ok(path):\n",
+    "                logger.info(f\"loaded project: {path}\")\n",
+    "            case Err(message):\n",
+    "                logger.error(message)\n",
+    "                return\n",
+    "\n",
+    "    insert_metadata(identifier, metadata)\n",
+    "    retrieve_metadata(identifier)\n",
     "\n",
     "    if save:\n",
     "        match backend.save_project(PATHS.get(\"destination\")):\n",
