Rename export camera manager and handlers.

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "26f6bf3a-a9bd-4ec4-8ff2-11550e1fddaa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-10-06 13:58:11.623\u001b[0m | \u001b[31m\u001b[1mERROR   \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36mmain\u001b[0m:\u001b[36m72\u001b[0m - \u001b[31m\u001b[1mpath does not exist: ~/data/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "import ast\n",
     "\n",
@@ -67,15 +75,16 @@
     "def main() -> None:\n",
     "    \"\"\"Main entrypoint.\"\"\"\n",
     "\n",
+    "    DEVICE: Path = Path(\"~/data\")\n",
+    "\n",
     "    PATHS: dict[str, Path] = {\n",
-    "        \"source\": Path(\n",
-    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
-    "        ),\n",
-    "        \"destination\": Path(\n",
-    "            \"/data/kingston_snv_01/acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"\n",
-    "        ),\n",
-    "        \"metadata\": Path(\n",
-    "            \"/data/kingston_snv_01/acfr_cameras_metadata/r23685bc_20100605_021022_camera_metadata.csv\"\n",
+    "        \"source\": DEVICE\n",
+    "        / Path(\"acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"),\n",
+    "        \"destination\": DEVICE\n",
+    "        / Path(\"acfr_metashape_projects_dev/r23685bc_lite_metadata.psz\"),\n",
+    "        \"metadata\": DEVICE\n",
+    "        / Path(\n",
+    "            \"acfr_cameras_metadata/r23685bc_20100605_021022_camera_metadata.csv\"\n",
     "        ),\n",
     "    }\n",
     "\n",
@@ -94,7 +103,7 @@
     "                return\n",
     "\n",
     "    insert_metadata(identifier, metadata)\n",
-    "    retrieve_metadata(identifier)\n",
+    "    camera_metadata: dict = retrieve_metadata(identifier)\n",
     "\n",
     "    if save:\n",
     "        match backend.save_project(PATHS.get(\"destination\")):\n",
